samples/_failures_safe/1761286478_f38418_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ba801038.c: In function ‘bfs’:
./samples/SAFE/__tmp_ba801038.c:158:5: error: expected expression at end of input
  158 |     if (!
      |     ^~
./samples/SAFE/__tmp_ba801038.c:158:5: error: expected declaration or statement at end of input
